fix header size on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -69,6 +69,12 @@ header > h1 {
 	font-weight: 300;
 }
 
+@media(max-width: 600px) {
+	header > h1 {
+		font-size: 54px;
+	}
+}
+
 footer {
 	width: var(--page-width);
 	max-width: 100%;
